corrected contrast error on index.html. Added headers to the wave accessibility testing area of the readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,10 @@ section {
     margin-top: 10px;
 }
 
+#contact-link {
+    color:#62A0FD;
+}
+
 /* Formatting for the main text across all pages */
 .main-text {
     font-size: 1.2rem;
